# simple-machine-learning-in-c

./: .gitignore  CMakeLists.txt  main.cpp
